@startuml
abstract class Usuario [[java:usuarios.Usuario]] {
	-dni: Integer
	-clave: String
	-nombre: String
	-apellido: String
	-urlImagen: String

	+<<create>>Usuario(dni: Integer, clave: String, nombre: String, apellido: String, urlImagen: String)
	+getDni(): Integer
	+getClave(): String
	+getNombre(): String
	+getApellido(): String
	+getUrlImage(): String
}

class Administrador [[java:usuarios.Administrador]] extends Usuario {
    +Administrador(dni: Integer, clave: String, nombre: String, apellido: String, urlImagen: String)
}

enum Turno [[java:usuarios.Turno]] {
	MAÑANA
	TARDE
}

class ResponsableDeTurno [[java:usuarios.ResponsableDeTurno]] extends Usuario {
	+<<create>>ResponsableDeTurno(dni: Integer, clave: String, nombre: String, apellido: String, urlImagen: String, turno: Turno)
	+getTurno(): Turno
}
ResponsableDeTurno --> "1" Turno : -turno

class Cliente [[java:usuarios.Cliente]] extends Usuario {
	-email: String

	+<<create>>Cliente(dni: Integer, clave: String, nombre: String, apellido: String, urlImagen: String, email: String)
	+getEmail(): String
}

enum TipoSugerencia [[java:sugerencias.TipoSugerencia]] {
	ALIMENTOS
	INFRAESTRUCTURA
	ATENCION
	OTRO
}

class Sugerencia [[java:sugerencias.Sugerencia]] {
	-descripcion: String
	-fecha: LocalTime

	+Sugerencia(descripcion: String, tipo: TipoSugerencia, cliente: Cliente)
	+getDescripcion(): String
	+getFecha(): LocalTime
	+getTipo(): TipoSugerencia
	+getCliente(): Cliente
}
Sugerencia -l-> "1" TipoSugerencia : -tipo
Sugerencia --> "1" Cliente : -cliente

interface Preciable [[java:menu.Preciable]] {
	getPrecio(): Real
}

enum TipoComida [[java:menu.TipoComida]] {
	ENTRADA
	PLATO_PRINCIPAL
	POSTRE
	BEBIDA
	OTRO
}

class Comida [[java:menu.Comida]] extends Preciable {
	-nombre: String
	-urlImagen: String
	-esVegetariana: Boolean
	-precio: Real

	+<<create>>Comida(nombre: String, urlImagen: String, tipoComida: TipoComida, esVegetariana: Boolean, precio: Real)
	+getNombre(): String
	+getUrlImagen(): String
	+esVegetariana(): Boolean
	+getPrecio(): Real
	+getTipoComida(): TipoComida
	+equals(object: Object): Boolean
}
Comida -u-> "1" TipoComida : -tipoComida

class Menu [[java:menu.Menu]] extends Preciable {
	-nombre: String
	-precio: Real

	+<<create>>Menu(nombre: String, precio: Real)
	+addComidaVegetariana(comida: Comida): Boolean
	+addComidaNoVegetariana(comida: Comida): Boolean
	+removeComidaVegetariana(comida: Comida): Boolean
	+removeComidaNoVegetariana(comida: Comida): Boolean
	+getNombre(): String
	+getPrecio(): Real
	+equals(object: Object): Boolean
}
Menu -l-> "*" Comida : -comidasVegetarianas
Menu -l-> "*" Comida : -comidasNoVegetarianas

class ItemPedido [[java:menu.ItemPedido]] {
	-precioUnitario: Real
	-cantidad: Integer

	+<<create>>ItemPedido(item: Preciable)
	+getPrecioUnitario(): Real
	+getPrecio(): Real
	+getCantidad(): Integer
	+addCantidad()
	+getItem(): Preciable
}
ItemPedido --> "1" Preciable : -item

class Pedido [[java:menu.Pedido]] {
    -fecha: Date
	+<<create>>Pedido(cliente: Cliente)
	+addItem(item: Preciable)
	+getPrecio(): Real
	+getCliente(): Cliente
	+getItems(): List<ItemPedido>
	+getFecha(): Date
}
Pedido --> "*" ItemPedido : -items
Pedido --> "1" Cliente : -cliente

enum MetodoPago [[java:menu.MetodoPago]] {
    CREDITO
    EFECTIVO
    DEBITO
    MERCADO_PAGO
    CUENTA_DNI
}

class Pago [[java:menu.Pago]] {
    +<<create>>Pago(pedido: Pedido, metodo: MetodoPago)
    +getMetodo(): MetodoPago
    +getPedido(): Pedido
}
Pago --> "1" MetodoPago : -metodo
Pago --> "1" Pedido : -pedido
@enduml